update openapi-generator and swagger-ui
