# models/model_get_info_200_response.go
@@ -1,0 +1,10 @@
+package models
+
+type GetInfo200Response struct {
+
+	BuildDate string `json:"buildDate,omitempty"`
+
+	Commit string `json:"commit,omitempty"`
+
+	Version string `json:"version,omitempty"`
+}
